fix input bug not counting decimal places correctly. Adjust header image and sizing, as well as margins. Adjust text alignment from center to left for most things.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: top;
-  height: 85vh;
+  min-height: 85vh;
 }
 .content {
   display: flex;
@@ -21,37 +21,47 @@
 .content .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: var(--flexchildren-alignment);
   justify-content: center;
 }
 
 .content h5 {
   color: hsl(0, 0%, 50%);
-  text-align: center;
 }
 .content h4 {
   color: hsl(0, 0%, 50%);
-  text-align: center;
-  margin-bottom: -1rem;
 }
 
 .content h3 {
   color: hsl(0, 0%, 50%);
-  text-align: center;
+
   transition: ease-in-out, color 0.25s;
 }
 .content h2 {
   color: hsl(0, 0%, 75%);
+}
+.header h5 {
+  text-align: center;
+  text-align: var(--text-alignment);
+}
+.header h4 {
+  text-align: center;
+  margin-bottom: -1rem;
+  text-align: var(--text-alignment);
+}
+.header h3 {
   text-align: center;
 }
-.content h1 {
+.header h2 {
   text-align: center;
+  text-align: var(--text-alignment);
 }
 .header h1 {
   text-decoration-line: underline;
   text-decoration-style: solid;
   text-decoration-color: var(--turquoise);
   text-decoration-thickness: 5px;
+  text-align: var(--text-alignment);
 }
 
 .warning {
@@ -70,8 +80,9 @@
   /* width: 45%; */
   width: auto;
   max-width: 95%;
-  max-height: 30vh;
+  max-height: 25vh;
   aspect-ratio: 1/1;
+  align-self: center;
   /* border: 3px solid white; */
   /* border-radius: 50% 50%; */
   /* margin-top: 4rem; */
@@ -103,6 +114,10 @@
 .inputSection {
   display: flex;
   flex-direction: column;
+}
+
+.inputSection h5 {
+  align-self: var(--flexchildren-alignment);
 }
 
 .inputFields {
@@ -141,6 +156,13 @@
 .inputFields label:focus-within h3 {
   font-weight: bold;
   color: white;
+}
+
+.resultsSection h2 {
+  text-align: center;
+}
+.resultsSection h1 {
+  text-align: center;
 }
 
 .higher {
@@ -206,7 +228,7 @@
 
 @media only screen and (max-width: 488px) {
   .content {
-    width: 90%;
+    /* width: 90%; */
   }
   .heroimg {
     /* width: 70%; */
